# LoveKey

./: .gitignore  README.md  android_jelly_update.py  change_theme_native.py  final_fix.py  fix_bottom_nav.py  fix_counselor_clean.py  fix_counselor_screen.py  fix_errors.py  fix_errors2.py  fix_errors3.py  fix_home_only_painter.py  fix_hover_animation.py  fix_onboarding_screen.py  fix_profile_screen.py  fix_syntax.py  fix_syntax_bugs.py  fix_syntax_final.py  fix_syntax_home.py  fix_syntax_home_3.py  fix_syntax_home_final_real.py  fix_syntax_home_real.py  fix_syntax_home_real_again.py  fix_syntax_safest.py  jelly_theme_update.py  plan.md  pubspec.yaml  rewrite_heart_painter.py  run_all_tests.sh  update_3d_heart.py  update_counselor_screen.py  update_home_screen.py  update_keyboard_screen.py  update_scripts_screen.py
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  rime_jni.cpp
android/app/src/main/res/layout/: item_ai_reply.xml  (+1 more)
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/screens/: chat.dart  counselor_screen.dart  home_screen.dart  keyboard_screen.dart  onboarding_screen.dart  profile_screen.dart  scripts_screen.dart
lib/widgets/: simulated_keyboard.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+14 files in other folders)
